<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"

        >

            <LinearLayout
                android:layout_width="@dimen/pay_dialog_size_width"
                android:layout_height="@dimen/pay_dialog_size_height"
                android:orientation="vertical"
                android:layout_centerInParent="true"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/pay_dialog_title"
                    android:background="@drawable/top_white"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textSize="25sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:background="@color/white"
                    >
                    <com.stop.zparkingzj.view.ClearEditText
                        android:id="@+id/mMoney"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="10"
                        android:drawableLeft="@drawable/money_icon"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:textColor="@color/black"


                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:background="@drawable/bottom_white">
                    <Button
                        android:id="@+id/mSave"
                        android:text="@string/save"
                        android:background="@drawable/alarm_save"
                        style="@style/Dialog_buttion_style"

                        />
                    <Button
                        android:id="@+id/mEsc"
                        android:text="@string/esc"
                        android:background="@drawable/alarm_esc"
                        style="@style/Dialog_buttion_style"
                        />
                </LinearLayout>
            </LinearLayout>

    </LinearLayout>


